--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "cmdk": "latest",
     "date-fns": "latest",
     "embla-carousel-react": "latest",
-    "firebase": "latest",
+    "firebase": "^12.1.0",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
